// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicProjectPage renders a spinner if no project is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    data-testid="loading_spinner"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders correctly with no end date 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-204"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-191"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-221"
        >
          <div
            class="MuiBox-root MuiBox-root-222"
          >
            <div
              class="MuiBox-root MuiBox-root-223"
            >
              <a
                aria-disabled="false"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Back to Projects
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiBox-root MuiBox-root-224"
            >
              <h1
                class="MuiBox-root MuiBox-root-225 makeStyles-projectTitle-207"
              >
                <b>
                  Project -
                </b>
                 Test Project Name
              </h1>
            </div>
            <div
              class="MuiBox-root MuiBox-root-226"
            >
              <div
                class="MuiBox-root MuiBox-root-227"
              >
                <div
                  class="MuiChip-root makeStyles-chip-214 makeStyles-chipNotAPriority-220 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Priority
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-228"
              >
                <div
                  class="MuiChip-root makeStyles-chip-214 makeStyles-chipActive-215 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Active
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-229 makeStyles-projectMetadata-209"
          >
            <section
              class="MuiBox-root MuiBox-root-230"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Objectives
              </h3>
              <div
                class="MuiBox-root MuiBox-root-231"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Project objectives
                </p>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-232"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                General Information
              </h3>
              <div
                class="MuiBox-root MuiBox-root-233"
              >
                <dl
                  class="MuiBox-root MuiBox-root-234"
                  data-testid="general_info_component"
                >
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Project Name:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Test Project Name
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Completion Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      ---
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dd>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-235"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Project Contacts
              </h3>
              <div
                class="MuiBox-root MuiBox-root-236"
              >
                <ul
                  class="makeStyles-projectContactList-237"
                >
                  <li
                    class="MuiBox-root MuiBox-root-239"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-240"
                    >
                      <svg
                        class="makeStyles-contactIcon-238"
                        role="presentation"
                        style="width: 2.25rem; height: 2.25rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div>
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                           Amanda Christensen
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="#"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-241"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="projectPermitsTitle"
              >
                Permits
              </h3>
              <div
                class="MuiBox-root MuiBox-root-242"
              >
                <ul
                  class="makeStyles-projectPermitList-243"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-244"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="IUCNTitle"
              >
                IUCN Conservation Actions Classifications
              </h3>
              <div
                class="MuiBox-root MuiBox-root-245"
              >
                <ul
                  class="makeStyles-projectIucnList-246"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-247"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="fundingSourcesTitle"
              >
                Funding Sources
              </h3>
              <div
                class="MuiBox-root MuiBox-root-248"
              >
                <ul
                  class="makeStyles-projectFundingList-249"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-250"
                    >
                      <strong
                        data-testid="agencyTitle"
                      >
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-251"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dt>
                      </div>
                    </dl>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-252"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="partnershipsTitle"
              >
                Partnerships
              </h3>
              <div
                class="MuiBox-root MuiBox-root-253"
              >
                <dl
                  class="MuiBox-root MuiBox-root-255"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-254"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-254"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-254"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-254"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-256 makeStyles-projectLocationBoundary-203"
    >
      <div
        class="MuiBox-root MuiBox-root-257"
      >
        <div
          class="MuiBox-root MuiBox-root-258"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  aria-label="Open Layer Menu"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
                  data-testid="open-layer-menu"
                  id="open-layer-menu"
                  tabindex="0"
                  title="Open Layer Menu"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <strong>
                      Project Layers (0)
                    </strong>
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7,10L12,15L17,10H7Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-259"
      >
        <div
          class="MuiBox-root MuiBox-root-260"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-261 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_67"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_67"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-262"
      >
        <div
          class="MuiBox-root MuiBox-root-269"
        >
          <div
            class="MuiBox-root MuiBox-root-270"
          >
            <strong>
              Found 0 treatments
            </strong>
          </div>
          <div
            class="MuiTableContainer-root MuiBox-root MuiBox-root-271"
          >
            <table
              aria-label="treatments-list-table"
              class="MuiTable-root makeStyles-treatmentsTable-263 MuiTable-stickyHeader"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  >
                    ID
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Treatments
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Width (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Length (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Area (Ha)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                    width="130"
                  >
                    Action
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
                data-testid="project-table"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    colspan="7"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-272"
                    >
                      No Treatments
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is active) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-40"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-27"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-57"
        >
          <div
            class="MuiBox-root MuiBox-root-58"
          >
            <div
              class="MuiBox-root MuiBox-root-59"
            >
              <a
                aria-disabled="false"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Back to Projects
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiBox-root MuiBox-root-60"
            >
              <h1
                class="MuiBox-root MuiBox-root-61 makeStyles-projectTitle-43"
              >
                <b>
                  Project -
                </b>
                 Test Project Name
              </h1>
            </div>
            <div
              class="MuiBox-root MuiBox-root-62"
            >
              <div
                class="MuiBox-root MuiBox-root-63"
              >
                <div
                  class="MuiChip-root makeStyles-chip-50 makeStyles-chipNotAPriority-56 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Priority
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-64"
              >
                <div
                  class="MuiChip-root makeStyles-chip-50 makeStyles-chipActive-51 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Active
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-65 makeStyles-projectMetadata-45"
          >
            <section
              class="MuiBox-root MuiBox-root-66"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Objectives
              </h3>
              <div
                class="MuiBox-root MuiBox-root-67"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Project objectives
                </p>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-68"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                General Information
              </h3>
              <div
                class="MuiBox-root MuiBox-root-69"
              >
                <dl
                  class="MuiBox-root MuiBox-root-70"
                  data-testid="general_info_component"
                >
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Project Name:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Test Project Name
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Completion Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2100
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dd>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-71"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Project Contacts
              </h3>
              <div
                class="MuiBox-root MuiBox-root-72"
              >
                <ul
                  class="makeStyles-projectContactList-73"
                >
                  <li
                    class="MuiBox-root MuiBox-root-75"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-76"
                    >
                      <svg
                        class="makeStyles-contactIcon-74"
                        role="presentation"
                        style="width: 2.25rem; height: 2.25rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div>
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                           Amanda Christensen
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="#"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-77"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="projectPermitsTitle"
              >
                Permits
              </h3>
              <div
                class="MuiBox-root MuiBox-root-78"
              >
                <ul
                  class="makeStyles-projectPermitList-79"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-80"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="IUCNTitle"
              >
                IUCN Conservation Actions Classifications
              </h3>
              <div
                class="MuiBox-root MuiBox-root-81"
              >
                <ul
                  class="makeStyles-projectIucnList-82"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-83"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="fundingSourcesTitle"
              >
                Funding Sources
              </h3>
              <div
                class="MuiBox-root MuiBox-root-84"
              >
                <ul
                  class="makeStyles-projectFundingList-85"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-86"
                    >
                      <strong
                        data-testid="agencyTitle"
                      >
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-87"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dt>
                      </div>
                    </dl>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-88"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="partnershipsTitle"
              >
                Partnerships
              </h3>
              <div
                class="MuiBox-root MuiBox-root-89"
              >
                <dl
                  class="MuiBox-root MuiBox-root-91"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-90"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-90"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-90"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-90"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-92 makeStyles-projectLocationBoundary-39"
    >
      <div
        class="MuiBox-root MuiBox-root-93"
      >
        <div
          class="MuiBox-root MuiBox-root-94"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  aria-label="Open Layer Menu"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
                  data-testid="open-layer-menu"
                  id="open-layer-menu"
                  tabindex="0"
                  title="Open Layer Menu"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <strong>
                      Project Layers (0)
                    </strong>
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7,10L12,15L17,10H7Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-95"
      >
        <div
          class="MuiBox-root MuiBox-root-96"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-97 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_35"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_35"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-98"
      >
        <div
          class="MuiBox-root MuiBox-root-105"
        >
          <div
            class="MuiBox-root MuiBox-root-106"
          >
            <strong>
              Found 0 treatments
            </strong>
          </div>
          <div
            class="MuiTableContainer-root MuiBox-root MuiBox-root-107"
          >
            <table
              aria-label="treatments-list-table"
              class="MuiTable-root makeStyles-treatmentsTable-99 MuiTable-stickyHeader"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  >
                    ID
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Treatments
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Width (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Length (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Area (Ha)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                    width="130"
                  >
                    Action
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
                data-testid="project-table"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    colspan="7"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-108"
                    >
                      No Treatments
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is completed) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-122"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-109"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-139"
        >
          <div
            class="MuiBox-root MuiBox-root-140"
          >
            <div
              class="MuiBox-root MuiBox-root-141"
            >
              <a
                aria-disabled="false"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Back to Projects
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiBox-root MuiBox-root-142"
            >
              <h1
                class="MuiBox-root MuiBox-root-143 makeStyles-projectTitle-125"
              >
                <b>
                  Project -
                </b>
                 Test Project Name
              </h1>
            </div>
            <div
              class="MuiBox-root MuiBox-root-144"
            >
              <div
                class="MuiBox-root MuiBox-root-145"
              >
                <div
                  class="MuiChip-root makeStyles-chip-132 makeStyles-chipNotAPriority-138 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Priority
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-146"
              >
                <div
                  class="MuiChip-root makeStyles-chip-132 makeStyles-chipPublishedCompleted-134 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Completed
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-147 makeStyles-projectMetadata-127"
          >
            <section
              class="MuiBox-root MuiBox-root-148"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Objectives
              </h3>
              <div
                class="MuiBox-root MuiBox-root-149"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Project objectives
                </p>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-150"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                General Information
              </h3>
              <div
                class="MuiBox-root MuiBox-root-151"
              >
                <dl
                  class="MuiBox-root MuiBox-root-152"
                  data-testid="general_info_component"
                >
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Project Name:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Test Project Name
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Completion Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2021
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dd>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-153"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Project Contacts
              </h3>
              <div
                class="MuiBox-root MuiBox-root-154"
              >
                <ul
                  class="makeStyles-projectContactList-155"
                >
                  <li
                    class="MuiBox-root MuiBox-root-157"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-158"
                    >
                      <svg
                        class="makeStyles-contactIcon-156"
                        role="presentation"
                        style="width: 2.25rem; height: 2.25rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div>
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                           Amanda Christensen
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="#"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-159"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="projectPermitsTitle"
              >
                Permits
              </h3>
              <div
                class="MuiBox-root MuiBox-root-160"
              >
                <ul
                  class="makeStyles-projectPermitList-161"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-162"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="IUCNTitle"
              >
                IUCN Conservation Actions Classifications
              </h3>
              <div
                class="MuiBox-root MuiBox-root-163"
              >
                <ul
                  class="makeStyles-projectIucnList-164"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-165"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="fundingSourcesTitle"
              >
                Funding Sources
              </h3>
              <div
                class="MuiBox-root MuiBox-root-166"
              >
                <ul
                  class="makeStyles-projectFundingList-167"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-168"
                    >
                      <strong
                        data-testid="agencyTitle"
                      >
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-169"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dt>
                      </div>
                    </dl>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-170"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="partnershipsTitle"
              >
                Partnerships
              </h3>
              <div
                class="MuiBox-root MuiBox-root-171"
              >
                <dl
                  class="MuiBox-root MuiBox-root-173"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-172"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-172"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-172"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-172"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-174 makeStyles-projectLocationBoundary-121"
    >
      <div
        class="MuiBox-root MuiBox-root-175"
      >
        <div
          class="MuiBox-root MuiBox-root-176"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  aria-label="Open Layer Menu"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
                  data-testid="open-layer-menu"
                  id="open-layer-menu"
                  tabindex="0"
                  title="Open Layer Menu"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <strong>
                      Project Layers (0)
                    </strong>
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        role="presentation"
                        style="width: 1.5rem; height: 1.5rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7,10L12,15L17,10H7Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-177"
      >
        <div
          class="MuiBox-root MuiBox-root-178"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-179 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_52"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_52"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-180"
      >
        <div
          class="MuiBox-root MuiBox-root-187"
        >
          <div
            class="MuiBox-root MuiBox-root-188"
          >
            <strong>
              Found 0 treatments
            </strong>
          </div>
          <div
            class="MuiTableContainer-root MuiBox-root MuiBox-root-189"
          >
            <table
              aria-label="treatments-list-table"
              class="MuiTable-root makeStyles-treatmentsTable-181 MuiTable-stickyHeader"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                    width="50"
                  >
                    ID
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Treatments
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Width (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Length (m)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                  >
                    Area (Ha)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall MuiTableCell-stickyHeader"
                    scope="col"
                    width="130"
                  >
                    Action
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
                data-testid="project-table"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    colspan="7"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-190"
                    >
                      No Treatments
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
